--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.3.1"
+    "astro": "^1.3.1",
+    "astro-icon": "^0.7.3"
   }
 }
