--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.3.1",
     "astro-icon": "^0.7.3"
+  },
+  "dependencies": {
+    "@astrojs/lit": "^1.0.1",
+    "@webcomponents/template-shadowroot": "^0.1.0",
+    "lit": "^2.3.1"
   }
 }
