added new target

--- a/.firebaserc
+++ b/.firebaserc
@@ -8,6 +8,9 @@
         "odyssey-theme": [
           "odyssey-theme"
         ],
+        "pro-file": [
+          "pro-file"
+        ],
         "simple-blog": [
           "little-sticks-simple-blog"
         ],
